recreated eks cluster & modified exposed reverseProxy service

--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
       - image: scoma/udagram-frontend:latest
         name: frontend
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
