--- a/udagram-reverseproxy/nginx.conf
+++ b/udagram-reverseproxy/nginx.conf
@@ -5,10 +5,11 @@ events {
 error_log /dev/stdout debug;
 http {
     sendfile on;
-    upstream user {
+    proxy_http_version 1.1;
+    upstream user-backend {
         server api-user:8080;
     }
-    upstream feed {
+    upstream feed-backend {
         server api-feed:8080;
     }
     proxy_set_header Host $host;
@@ -19,10 +20,10 @@ http {
     server {
         listen 8080;
         location /api/v0/feed {
-            proxy_pass http://feed;
+            proxy_pass http://feed-backend;
         }
         location /api/v0/users {
-            proxy_pass http://user;
+            proxy_pass http://user-backend;
         }
     }
 }
